# kiberone-generation-sdxl-turbo

./: docker-compose.inference.yml  docker-compose.web.yml
app/api/: .dockerignore  Dockerfile  pyproject.toml
app/api/app/: config.py  jobs.py  logging_config.py  main.py  sessions.py
app/api/app/routers/: __init__.py  auth.py  canvas.py  generate.py  history.py  images.py  results.py  upload.py  ws.py
app/api/app/utils/: images.py  responses.py  templates.py  translation.py
app/api/app/utils/assets/templates/: README.md
app/api/tests/: test_canvas_templates.py
app/common/: __init__.py  safety.py
app/frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
app/frontend/app/: globals.css  layout.tsx
app/frontend/app/(auth)/login/: page.tsx
app/frontend/app/(main)/app/: page.tsx
app/frontend/components/: auth-watcher.tsx  canvas-panel.tsx  header.tsx  hero-section.tsx  prompt-panel.tsx  result-panel.tsx
app/frontend/hooks/: use-generation-controller.ts
app/frontend/lib/: api-config.ts  auth-redirect.ts
app/frontend/providers/: localization-provider.tsx
app/frontend/store/: app-store.ts
app/frontend/types/: use-image.d.ts
app/inference/: .dockerignore  Dockerfile  logging_config.py  requirements.txt  worker.py
app/inference/scripts/: download_models.py
